# evt_bringup

./: .gitignore  README.md  WIFI_L15_HANDOVER_STATE.md
dk_pair_test/: README.md
dk_pair_test/9151dk_bitbang/: CMakeLists.txt  prj.conf
dk_pair_test/9151dk_bitbang/src/: main.c
dk_pair_test/9151dk_master/: CMakeLists.txt  prj.conf
dk_pair_test/9151dk_master/src/: main.c
dk_pair_test/9151dk_silent/: CMakeLists.txt  prj.conf
dk_pair_test/9151dk_silent/src/: main.c
dk_pair_test/l15dk_observer/: CMakeLists.txt  prj.conf  sysbuild.conf
dk_pair_test/l15dk_observer/boards/: nrf54l15dk_nrf54l15_cpuapp_ns.overlay
dk_pair_test/l15dk_observer/src/: main.c
flash_test_dk/: CMakeLists.txt  prj.conf
flash_test_dk/boards/: nrf9151dk_nrf9151_ns.overlay
flash_test_dk/src/: main.c
flash_test_evt1/: CMakeLists.txt  prj.conf
flash_test_evt1/src/: main.c
flash_test_evt2/: CMakeLists.txt  prj.conf
flash_test_evt2/boards/: nrf9151_nova_evt2_nrf9151_ns.overlay
flash_test_evt2/src/: main.c
flash_test_evt2_minimal/: CMakeLists.txt  prj.conf
flash_test_evt2_minimal/boards/: nrf9151_nova_evt2_nrf9151_ns.overlay
flash_test_evt2_minimal/src/: main.c
flash_test_evt2_raw_spim/: CMakeLists.txt  prj.conf
flash_test_evt2_raw_spim/src/: main.c
flash_test_l15_evt2/: CMakeLists.txt  prj.conf  sysbuild.conf
flash_test_l15_evt2/src/: main.c
nrf54l15_bringup/: CMakeLists.txt  README.md  prj.conf  sysbuild.conf
nrf54l15_bringup/boards/palroc/nrf54l15_palroc/: Kconfig  Kconfig.defconfig  Kconfig.nrf54l15_palroc  board.cmake  board.yml  nrf54l15_palroc-pinctrl.dtsi  nrf54l15_palroc_common.dtsi  nrf54l15_palroc_cpuapp_common.dtsi  nrf54l15_palroc_nrf54l15_cpuapp.dts  nrf54l15_palroc_nrf54l15_cpuapp.yaml
nrf54l15_bringup/boards/palroc/nrf54l15_palroc_complete/: Kconfig  Kconfig.defconfig  Kconfig.nrf54l15_palroc_complete  README.md  board.cmake  board.yml  nrf54l15_cpuapp_common.dtsi  nrf54l15_palroc_complete_common.dtsi  nrf54l15_palroc_complete_nrf54l15-pinctrl.dtsi  nrf54l15_palroc_complete_nrf54l15_cpuapp.dts  nrf54l15_palroc_complete_nrf54l15_cpuapp.yaml  nrf54l15_palroc_complete_nrf54l15_cpuapp_defconfig  nrf54l15_palroc_complete_nrf54l15_cpuapp_ns.dts  nrf54l15_palroc_complete_nrf54l15_cpuapp_ns.yaml  nrf54l15_palroc_complete_nrf54l15_cpuapp_ns_defconfig  nrf54l15_palroc_complete_nrf54l15_cpuflpr.dts  nrf54l15_palroc_complete_nrf54l15_cpuflpr.yaml  nrf54l15_palroc_complete_nrf54l15_cpuflpr_defconfig  nrf54l15_palroc_complete_nrf54l15_cpuflpr_xip.dts  nrf54l15_palroc_complete_nrf54l15_cpuflpr_xip.yaml  nrf54l15_palroc_complete_nrf54l15_cpuflpr_xip_defconfig
nrf54l15_bringup/src/: main.c  test_report.c  test_report.h  uart_chat.c  uart_chat.h  wifi_probe.c
nrf9151_bringup/: .gitignore  CMakeLists.txt  DEBUGGING.md  README.md  devzone_post_9151_spim3_dead.md  devzone_post_gnss_lna.md  devzone_post_ressa.md  firmware_handoff.md  flash_spi_writeup_cody.md  gnss_sample_nova.conf  how_to_rtt.md  overlay-provision.conf  prj.conf  sample.yaml  steps.md  sysbuild.conf  test_summary.md
nrf9151_bringup/boards/palroc/nrf9151dk/: Kconfig.defconfig  Kconfig.nrf9151_palroc  board.yml  nrf9151_palroc_nrf9151.yaml  nrf9151_palroc_nrf9151_ns.yaml  nrf9151dk_nrf9151_common-pinctrl.dtsi  nrf9151dk_nrf9151_common.dtsi
nrf9151_bringup/bringup_logs/: README.md
nrf9151_bringup/bringup_logs/evt2_brd1/: 2026-05-27_demo.txt  2026-05-27_demo_with_gnss.txt  2026-05-27_demo_with_gnss_v2.txt
nrf9151_bringup/bringup_logs/evt2_brd2/: 2026-05-27_demo_with_gnss.txt
nrf9151_bringup/bringup_logs/evt2_brd3/: 2026-05-27_demo_with_gnss.txt  2026-05-27_demo_with_gnss_v2.txt
nrf9151_bringup/bringup_logs/evt2_brd4/: 2026-05-27_demo_with_gnss.txt  2026-05-27_demo_with_gnss_fix.txt
nrf9151_bringup/bringup_logs/evt2_brd5/: 2026-05-27_demo_with_gnss.txt  2026-05-27_demo_with_gnss_fix.txt
nrf9151_bringup/captures/: step5.2_b20only_-1dB_brownout_2026-04-26.ppk2  step5.2_b8only_-1dB_brownout_2026-04-26.ppk2
nrf9151_bringup/src/: button_probe.c  button_probe.h  diag.c  diag.h  gnss.c  gnss.h  i2c_probe.c  i2c_probe.h  leds.c  leds.h  main.c  modem.c  modem.h  npm1300.c  npm1300.h  provisioning.c  provisioning.h  spi_probe.c  spi_probe.h  test_report.c  test_report.h  wifi_probe.c  wifi_probe.h
reliability_test/: CMakeLists.txt  INTERN_BRIEF.md  README.md  prj.conf  sysbuild.conf
reliability_test/src/: coap_client.c  coap_client.h  main.c  server_config.h  telemetry.c  telemetry.h
